<?xml version="1.0"?>
<package format="2">
  <name>labrob_gazebo_worlds</name>
  <version>0.0.0</version>
  <description>The labrob_gazebo_worlds package</description>
  <maintainer email="cipriano@diag.uniroma1.it">Michele Cipriano</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
   <export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros gazebo_model_path="/home/alienware/dorazio_ws/tiago_qp_melodic/src/labrob_gazebo_worlds/worlds/ground_plane_mod"/> 
  </export>
</package>
